[gd_scene load_steps=2 format=3 uid="uid://pjl46hio81iw"]

[ext_resource type="Script" uid="uid://b8fk6t7hylrk5" path="res://src/menus/event_history.gd" id="1_my0cf"]

[node name="EventHistory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my0cf")

[node name="EventHistoryButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Event Histories"

[node name="EventHistoryList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_right = 123.5
offset_bottom = 400.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EventHistoryList"]
layout_mode = 2

[node name="DummyEvent" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 178.0
offset_bottom = 50.0

[node name="Name" type="Label" parent="DummyEvent"]
layout_mode = 2
text = "Event Text Here"
horizontal_alignment = 1

[node name="Description" type="Label" parent="DummyEvent"]
layout_mode = 2
text = "Event Description Here"
horizontal_alignment = 1

[connection signal="pressed" from="EventHistoryButton" to="." method="_on_event_history_button_pressed"]
